# Markdit

./: .env.example  .eslintrc.yml  .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/agents/: markdit.compliance.audit.agent.md  markdit.compliance.eu.agent.md  markdit.compliance.na.agent.md
.github/prompts/: markdit.compliance.audit.prompt.md  markdit.compliance.eu.prompt.md  markdit.compliance.na.prompt.md
.github/workflows/: ci.yml  release.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
compliance/backlog/: README.md  TEMPLATE.md  consolidated-backlog.md  eu-compliance-backlog.md  na-compliance-backlog.md  traceability-matrix.md
docs/: INSTALL.md
scripts/: gen-placeholder-icon.mjs  generate-corpus.mjs  sbom.mjs  sign-windows.ps1
specs/001-markdit-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-responsive-document-width/: spec.md
src/: styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: fs_watch.rs  lib.rs  main.rs
src-tauri/src/commands/: document.rs  export.rs  mod.rs  settings.rs  update.rs
src-tauri/src/tests/: document_open.rs  document_save_conflict.rs  mod.rs  updater_signature.rs
src/app/: App.tsx
src/export/: docx.ts  (+1 more)
(+70 files in other folders)
