[package]
name = "markdit"
version = "0.2.0"
description = "Markdit — a local-first, standards-based Markdown editor"
authors = ["Etienne Sigwald"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "markdit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
notify = "6"
thiserror = "1"

[features]
# Default production features.
default = []
